labs-k8s/network-policies/utils.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: utils
  labels:
    name: utils
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utils
  namespace: utils
  labels:
    app: uitls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utils
  template:
    metadata:
      labels:
        app: utils
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - utils
            topologyKey: "kubernetes.io/hostname"
      containers:
      # https://github.com/amouat/network-utils-container
      - name: utils
        image: amouat/network-utils
        command:
          - sleep
          - "3600"
