labs-k8s/network-policies/network-policy-ingress-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: webapp-balanced
spec:
  podSelector: {}
  policyTypes:
  - Ingress
